doc: chore authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,27 +1,18 @@
 Steven Buss <steven.buss@gmail.com>
 Alexander Schlarb <alexander@ninetailed.ninja>
 Fred Thomsen <fredthomsen@fredthomsen.net>
-Kevin Mai-Husan Chia <mhchia@users.noreply.github.com>
-acul71 <luca.pisani@birdo.net>
 Jesse Weinstein <jesse@wefu.org>
-mhchia <kevin.mh.chia@gmail.com>
-acul71 <34693171+acul71@users.noreply.github.com>
-Fred Thomsen <me@fredthomsen.net>
-Christophe de Carvalho Pereira Martins <christophe.dcpm@gmail.com>
-Arush Kurundodi <arushkurundodi@gmail.com>
-ricott1 <ricott2@gmail.com>
-Jonathan de Jong <jonathandejong02@gmail.com>
-Paul Robinson <5199899+pacrob@users.noreply.github.com>
-Raúl Kripalani <raul@protocol.ai>
-Robert Zajac <robzajac@users.noreply.github.com>
-zixuanzh <zixuanzh@seas.upenn.edu>
-Hugo <hugovk@users.noreply.github.com>
-justheuristic <justheuristic@gmail.com>
-Arush Kurundodi <69193694+arcinston@users.noreply.github.com>
-Manu Sheel Gupta <manusheel.edu@gmail.com>
-Raúl Kripalani <raul.kripalani@gmail.com>
-Rod Vagg <rod@vagg.org>
-Venkat Karun <venkat@worldsense.com>
-ZX <zixuanzh@seas.upenn.edu>
-fred <fredthomsen@fredthomsen.net>
-web3-bot <81333946+web3-bot@users.noreply.github.com>
+mhchia
+acul71
+arcinston
+pacrob
+raulk
+robzajac
+zixuanzh
+hugovk
+justheuristic
+manusheel
+rodvagg
+venkat
+fredthomsen
+web3-bot
