--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,18 @@
 Steven Buss <steven.buss@gmail.com>
+Alexander Schlarb <alexander@ninetailed.ninja>
 Fred Thomsen <fredthomsen@fredthomsen.net>
 Jesse Weinstein <jesse@wefu.org>
-Alexander Schlarb <alexander@ninetailed.ninja>
+mhchia
+acul71
+arcinston
+pacrob
+raulk
+robzajac
+zixuanzh
+hugovk
+justheuristic
+manusheel
+rodvagg
+venkat
+fredthomsen
+web3-bot
